// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemCreatedDate renders correctly 1`] = `
<div
  className="item-created-date"
>
  <p
    className="MuiTypography-root MuiTypography-body3 MuiTypography-colorNeutral MuiTypography-variantPlain css-gfqtt1-JoyTypography-root"
  >
    Created Jul 18, 2023 12:00 AM
  </p>
  <div
    className="hidden"
  >
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-17e890r-MuiSvgIcon-root"
      data-testid="HourglassBottomIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="m18 22-.01-6L14 12l3.99-4.01L18 2H6v6l4 4-4 3.99V22h12zM8 7.5V4h8v3.5l-4 4-4-4z"
      />
    </svg>
  </div>
</div>
`;

exports[`ItemCreatedDate renders proper styles for completed item 1`] = `
<div
  className="item-created-date"
>
  <p
    className="MuiTypography-root MuiTypography-body3 MuiTypography-colorNeutral MuiTypography-variantPlain css-1oc79or-JoyTypography-root"
  >
    Created Jul 18, 2023 12:00 AM
  </p>
  <div
    className="hidden"
  >
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-17e890r-MuiSvgIcon-root"
      data-testid="HourglassBottomIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="m18 22-.01-6L14 12l3.99-4.01L18 2H6v6l4 4-4 3.99V22h12zM8 7.5V4h8v3.5l-4 4-4-4z"
      />
    </svg>
  </div>
</div>
`;

exports[`ItemCreatedDate renders proper styles for newer incomplete item 1`] = `
<div
  className="item-created-date"
>
  <p
    className="MuiTypography-root MuiTypography-body3 MuiTypography-colorNeutral MuiTypography-variantPlain css-gfqtt1-JoyTypography-root"
  >
    Created Jul 18, 2023 12:00 AM
  </p>
  <div
    className="hidden"
  >
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-17e890r-MuiSvgIcon-root"
      data-testid="HourglassBottomIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="m18 22-.01-6L14 12l3.99-4.01L18 2H6v6l4 4-4 3.99V22h12zM8 7.5V4h8v3.5l-4 4-4-4z"
      />
    </svg>
  </div>
</div>
`;

exports[`ItemCreatedDate renders properly for older incomplete item 1`] = `
<div
  className="item-created-date"
>
  <p
    className="MuiTypography-root MuiTypography-body3 MuiTypography-colorNeutral MuiTypography-variantPlain css-gfqtt1-JoyTypography-root"
  >
    Created Jul 18, 2023 12:00 AM
  </p>
  <div
    className=""
  >
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-17e890r-MuiSvgIcon-root"
      data-testid="HourglassBottomIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="m18 22-.01-6L14 12l3.99-4.01L18 2H6v6l4 4-4 3.99V22h12zM8 7.5V4h8v3.5l-4 4-4-4z"
      />
    </svg>
  </div>
</div>
`;
